--- a/simple-express/package.json
+++ b/simple-express/package.json
@@ -15,6 +15,8 @@
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
-        
+    },
+    "scripts": {
+        "dev": "nodemon server.js"
     }
 }
